# 3d-donut

./: README.md  donut_math.py  donut_renderer.py  main.py  presentation.py  pyproject.toml
