[project]
name = "3d_donut"
version = "0.1.0"
description = "3D Donut is a Python package for creating and manipulating 3D donut shapes."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2",
    "textual>=3.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0",
    "textual-dev>=1.7.0",
]
